CSS fixes to improve font size, fixed top menu text being on 2-3 lines on small screens (just make text disappear for small screens), some spelling fixes, small edits to last blog posts, added AND/OR toggle to tags page

--- a/public/about.css
+++ b/public/about.css
@@ -40,3 +40,8 @@ a, a::visited{
 p a{
   color: #4ecdc4;
 }
+@media only screen and (min-width: 700px) {
+    p {
+        font-size:calc(10px + 1vw);
+    }
+}
