--- a/public/home.css
+++ b/public/home.css
@@ -1,66 +1,83 @@
 body {
-  background-color: #b1b6a6 !important;
-  margin: 0;
-  min-height: 100%;
-  width: 100%;
-  background-image: radial-gradient(
-    rgb(24, 26, 27) 1px,
-    rgb(0, 4, 0) 0px
-  ) !important;
-  background-size: 50px 50px !important;
+    background-color: #b1b6a6 !important;
+    margin: 0;
+    min-height: 100%;
+    width: 100%;
+    background-image: radial-gradient(rgb(24, 26, 27) 1px,
+            rgb(0, 4, 0) 0px) !important;
+    background-size: 50px 50px !important;
 }
+
 html {
-  margin: 0;
-  width: 100%;
-  height: 100%;
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
+
 #title {
-  color: #4ecdc4;
-  margin-top: calc(5vh + 5vw);
-  font-size: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-weight: 1000;
-  background-color: rgba(0, 5, 0, 1);
-  text-align: center;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-@media only screen and (min-width: 700px) {
-  #title {
-    font-size: calc(40px + 1.5vw);
-  }
-  p {
-    font-size: calc(20px + 1vw);
-  }
-  #recent {
+    color: #4ecdc4;
+    margin-top: calc(5vh + 5vw);
+    font-size: 40px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-  }
+    justify-content: center;
+    font-weight: 1000;
+    background-color: rgba(0, 5, 0, 1);
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
+@media only screen and (min-width: 700px) {
+    #title {
+        font-size: calc(40px + 1.5vw);
+    }
+
+    p {
+        font-size: calc(20px + 1vw);
+    }
+
+    #recent {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media only screen and (max-width: 699px) {
+    p {
+        color: #4ecdc4;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        font-size: calc(15px + 0.4vw);
+        width: 80%;
+        margin-left: 10vw;
+        text-align: left;
+    }
+}
+
 p {
-  color: #4ecdc4;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: calc(20px + 0.8vw);
-  width: 80%;
-  margin-left: 10vw;
-  text-align: center;
+    color: #4ecdc4;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    width: 80%;
+    margin-left: 10vw;
+    text-align: left;
 }
+
 a {
-  color: #4ecdc4;
-  text-decoration: none;
+    color: #4ecdc4;
+    text-decoration: none;
 }
+
 #recent {
-  width: 100vw;
-  max-height: 200vh;
-  display: flex;
-  flex-direction: column;
+    width: 100vw;
+    max-height: 200vh;
+    display: flex;
+    flex-direction: column;
 }
+
 #recent_h {
-  color: #4ecdc4;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: calc(3vh + 3vw);
-  text-align: center;
-  margin-top: 5vh;
+    color: #4ecdc4;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: calc(3vh + 3vw);
+    text-align: center;
+    margin-top: 5vh;
 }
