--- a/public/tags.css
+++ b/public/tags.css
@@ -14,7 +14,7 @@ html {
     height: 100%;
 }
 
-#tags-container title {
+#tags-container #title {
     color: #4ecdc4;
     margin-top: calc(5vh + 5vw);
     font-size: 40px;
@@ -44,9 +44,11 @@ html {
     color: #4ecdc4;
     margin-top: 1vh;
     font-size: 40px;
-    margin-left: 5vh;
+    margin-left:10vw;
+    width:80vw;
     display: flex;
     flex-direction: column;
+    font-size: calc(1vh + 1vw);
     justify-content: center;
     font-weight: 1000;
     background-color: rgba(0, 5, 0, 1);
@@ -57,7 +59,6 @@ html {
     color: #4ecdc4;
     margin-top: 0.2vh;
     font-size: 20px;
-    margin-left: 10vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -130,4 +131,13 @@ html {
         font-size: 0.85rem;
         padding: 0.6rem 1rem;
     }
+}
+#logic-toggle{
+    left:50%;
+}
+#logic-toggle-div{
+    display: flex; /* Enables CSS flexbox */
+    justify-content: center; /* Centers horizontally */
+    align-items:center;
+    height:10vh;
 }
